--- a/frontend/src/routes/layout.css
+++ b/frontend/src/routes/layout.css
@@ -1,3 +1,61 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+body {
+  @apply bg-neutral-300 text-stone-950;
+}
+
+.container {
+  @apply max-w-4xl bg-stone-400 mx-auto p-6 rounded-lg shadow-lg mt-10;
+}
+
+.header {
+  @apply text-4xl font-bold mb-4 text-center;
+}
+
+.subheader {
+  @apply text-lg text-center text-stone-800;
+}
+
+.mascotImage {
+  @apply mx-auto mt-6 w-48 h-48;
+}
+
+.botfeed-container {
+  @apply bg-stone-200 p-6 rounded-lg shadow-md mt-8 min-h-[50vh];
+}
+
+.botfeed-header {
+  @apply text-3xl font-semibold mb-2 text-center;
+}
+
+.botfeed-subheader {
+  @apply text-center text-stone-700 mb-6;
+}
+
+.botfeed-items {
+  @apply space-y-4 overflow-hidden border-t border-stone-300 pt-4 mt-2;
+}
+.feeditem {
+  @apply border border-stone-900 py-4 px-6 mb-4 rounded-lg bg-stone-50;
+}
+
+.feeditem-author {
+  @apply font-semibold text-stone-900;
+}
+
+.feeditem-command {
+  @apply font-bold text-lg;
+}
+.feeditem-output {
+  @apply mt-2 p-4 bg-stone-200 rounded;
+}
+
+.botfeed-button-test {
+  @apply bg-red-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded mb-4;
+}
+
+.botfeed-testing-note {
+  @apply bg-yellow-200 border-l-4 border-yellow-500 text-yellow-800 p-4 mb-6 text-center;
+}
