--- a/frontend/src/routes/layout.css
+++ b/frontend/src/routes/layout.css
@@ -68,3 +68,15 @@ body {
 .feeditem-icon {
   @apply inline-block w-5 h-5 mr-2 align-middle;
 }
+
+.warning-icon {
+  @apply inline-block w-5 h-5 mr-2 align-middle text-yellow-600;
+}
+
+.feeditem-uuid {
+  @apply text-xs text-stone-500 mt-1;
+}
+
+.feeditem-testitem-warning {
+   @apply mt-2 bg-yellow-50 p-2 rounded border border-orange-300;
+}
